--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <style>
             h1{
-                color: red;
+                color: white;
                 font-size: 40px;
                 text-align: center;
             }
@@ -13,106 +13,178 @@
                 color:white;
                 text-align: center;
             }
-            .FirstTwo{
-                color: beige;
-                position: relative;
-                left: 70px;
+            
+            a:link {
+            color:white; 
+            background-color: transparent; 
+            text-decoration: underline;
             }
-            .SecondTwo{
-                color: beige;
-                position: relative;
-                top: -350px;
-                left: 910px;
+
+            a:visited {
+            color: tan;
+            background-color: transparent;
+            text-decoration: underline;
             }
-            .LeftHalf{
+            .HomeLink{
+                position: absolute;
+                top: 100px;
+                left: 520px;
+            }
+            .MusicLink{
+                position: relative;
+                left: 570px;
+            }
+            .ReneTitle{
                 color: white;
                 position: relative;
-                left: 70px;
+                left: 300px;
             }
-            .RightHalf{
+            .AngelTitle{
+                color: white;
+                position: absolute;
+                top: 600px;
+                left: 300px;
+            }
+            .ReneText{
                 color: white;
                 position: relative;
-                top: -350px;
-                left: 910px;
+                top: -10px;
+                left: 300px;
+            }
+            .AngelText{
+                color: white;
+                position: absolute;
+                top: 640px;
+                left: 300px;
+            }
+            .NickTitle{
+                color: white;
+                position: absolute;
+                top: 410px;
+                left: 650px;
+            }
+            .NickText{
+                color: white;
+                position: absolute;
+                top: 450px;
+                right: 440px;
+            }
+            .JaydenTitle{
+                color: white;
+                position: absolute;
+                left: 650px;
+                top: 800px;
+            }
+            .JaydenText{
+                color: white;
+                position: absolute;
+                top: 840px;
+                left: 650px;
             }
             .Rene{
                 position: absolute;
-                top: 150px;
-                left: 400px;
+                top: 170px;
+                left: 40px;
                 width: 200px;
                 height: 200px;
             }
             .Angel{
                 position: absolute;
-                top: 360px;
-                left: 400px;
+                top: 600px;
+                left: 40px;
                 width: 200px;
                 height: 200px;
             }
             .Nick{
                 position: absolute;
-                top: 150px;
-                right: 400px;
+                top: 400px;
+                right: 40px;
                 width: 200px;
                 height: 200px;
             }
             .Jayden{
                 position: absolute;
-                top: 360px;
-                right: 400px;
+                top: 800px;
+                right: 40px;
                 width: 200px;
                 height: 200px;
             }
-            .HTM{
-                color:white;
-                text-align: center;
+            .ContactInfo{
+                position: absolute;
+                top: 1080px;
+                right: 590px;
+            }
+            .instaLogo{
+                position: absolute;
+                top: 1130px;
+                right: 670px;
+            }
+            .InstaLink{
+                position: absolute;
+                top: 1135px;
+                right: 570px;
+            }
+            .bcLogo{
+                position: absolute;
+                top: 1160px;
+                right: 660px;
+            }
+            .bcLink{
+                position: absolute;
+                top: 1165px;
+                right: 570px;
             }
         </style>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head>
-    <body style="background-color:black;">
-        <h1>The Montra Ca Official Website</h1>
+    <body style="background-color: rgb(43, 40, 40);">
+        <h1>The Nollie Dog Official Website</h1>
+        <div class = "MusicLink"><a href="Music.html"> Our Music </a></div>
+        <div class = "HomeLink"><a href="index.html"> Home </a></div>
         <h2>Meet the Members!</h2>
-            <h3 class = "FirstTwo">Rene Arroyo:</h3>
+            <h3 class = "ReneTitle">Rene Arroyo:</h3>
                 <div class = "Rene">
                     <img src="Rene.png" alt="This is Rene" width= 200px height =200px>
                 </div>
-                <p class = "LeftHalf">
+                <p class = "ReneText">
                     Rene got his start in the band in 2020. <br> started playing the drums and has since 
                     <br>taken up the shaker when necessary for <br> acoustic performances. Aside from <br> percussion, Rene also
                     plays the bass, <br> guitar, ukulele, and for a short time, <br>the trumpet. In the future, he plans to attend <br>
                     culinary school.
                 </p>
-            <h3 class = "FirstTwo">Angel Hernandez:</h3>
+            <h3 class = "AngelTitle">Angel Hernandez:</h3>
                 <div class = "Angel">
                     <img src="Angel.png" alt="This is Angel" width= 200px height =200px>
                 </div>
-                <p class = "LeftHalf">
+                <p class = "AngelText">
                     Angel Hernandez sings and plays guitar<br> for the band. Practice is held at his house.<br> He is
                     the brother to Nick Hernandez and<br> the main transportation as well as funder <br>for the band. 
                 </p>
-            <h3 class = "SecondTwo">Nick Hernandez:</h3>
+            <h3 class = "NickTitle">Nick Hernandez:</h3>
                 <div class = "Nick">
                     <img src="Nick.png" alt="This is Angel" width= 200px height =200px>
                 </div>
-                <p class = "RightHalf"> 
+                <p class = "NickText"> 
                     pretend I wrote something
                 </p>
-            <h3 class = "SecondTwo">Jayden Edwards:</h3>
+            <h3 class = "JaydenTitle">Jayden Edwards:</h3>
                 <div class = "Jayden">
                     <img src="Jayden.png" alt="This is Jayden" width= 200px height =200px>
                 </div>
-                <p class = "RightHalf"> 
+                <p class = "JaydenText"> 
                     pretend I wrote something
                 </p>
-        <h2>Hear Their Music!</h2>
-        <p class = "HTM">
-            pretend <br>
-            I <br>
-            wrote <br>
-            something <br>
-        </p>
+            <h4 class = "ContactInfo" style="color:white"> Check us out!</h4>
+            <div class = "instaLogo">
+                <img src="https://www.transparentpng.com/thumb/logo-instagram/YfpFOL-logo-instagram-free-transparent.png" alt="Insta Logo" width= 30px height = 30px>
+            </div>
+            <div class= "InstaLink"> <a href="https://l.instagram.com/?u=https%3A%2F%2Finstagram.com%2Fnollie.dog%3Figshid%3D1eaeca23ay398&e=ATN-Q5DmSX1sJuCwWyY_8lLFVlyIGuXjyeGKFGH5WIJLII8LqUgG4PMG6g2wCb2YiELi5X-uR2s44-1xrDIUwBQGqKTDJYcnAizrtA&s=1">@nollie.dog</a></div>
+            <div class = "bcLogo">
+                <img src="bc.png" alt="Bandcamp Logo" width=50px height= 30px>
+            </div>
+            <div class= "bcLink"><a href="https://l.instagram.com/?u=http%3A%2F%2Fnolliedog.bandcamp.com%2F&e=ATNhwe3dtf6xFnoABfzLGk39bcbbC3ZgCpLAmeDUdfkJ0sYHeeZA4V9-sg39OWxs3kKKRsuFXTxFTJX0yLb5ngG-NJ9XVD9Y4jYtNg&s=1">Nollie Dog </a></div>
+
     </body>
 </html>
