Changed last names

--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
                     plays the bass, <br> guitar, ukulele, and for a short time, <br>the trumpet. In the future, he plans to attend <br>
                     culinary school.
                 </p>
-            <h3 class = "AngelTitle">Angel Hernandez:</h3>
+            <h3 class = "AngelTitle">Angel Gomez:</h3>
                 <div class = "Angel">
                     <img src="Angel.png" alt="This is Angel" width= 200px height =200px>
                 </div>
                 <p class = "AngelText">
-                    Angel Hernandez sings and plays guitar<br> for the band. Practice is held at his house.<br> He is
-                    the brother to Nick Hernandez and<br> the main transportation as well as funder <br>for the band. 
+                    Angel Gomez sings and plays guitar<br> for the band. Practice is held at his house.<br> He is
+                    the brother to Nick Gomez and<br> the main transportation as well as funder <br>for the band. 
                 </p>
-            <h3 class = "NickTitle">Nick Hernandez:</h3>
+            <h3 class = "NickTitle">Nick Gomez:</h3>
                 <div class = "Nick">
                     <img src="Nick.png" alt="This is Angel" width= 200px height =200px>
                 </div>
