--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Home</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             h1{
                 color: white;
@@ -26,114 +26,198 @@
             background-color: transparent;
             text-decoration: underline;
             }
+
             .HomeLink{
-                position: absolute;
-                top: 100px;
-                left: 520px;
-            }
-            .MusicLink{
-                position: relative;
-                left: 570px;
-            }
-            .ReneTitle{
-                color: white;
-                position: relative;
-                left: 300px;
-            }
-            .AngelTitle{
-                color: white;
-                position: absolute;
-                top: 600px;
-                left: 300px;
-            }
-            .ReneText{
-                color: white;
-                position: relative;
-                top: -10px;
-                left: 300px;
-            }
-            .AngelText{
-                color: white;
-                position: absolute;
-                top: 640px;
-                left: 300px;
-            }
-            .NickTitle{
-                color: white;
-                position: absolute;
-                top: 410px;
-                left: 650px;
-            }
-            .NickText{
-                color: white;
-                position: absolute;
-                top: 450px;
-                right: 440px;
-            }
-            .JaydenTitle{
-                color: white;
-                position: absolute;
-                left: 650px;
-                top: 800px;
-            }
-            .JaydenText{
-                color: white;
-                position: absolute;
-                top: 840px;
-                left: 650px;
-            }
-            .Rene{
-                position: absolute;
-                top: 170px;
-                left: 40px;
-                width: 200px;
-                height: 200px;
-            }
-            .Angel{
-                position: absolute;
-                top: 600px;
-                left: 40px;
-                width: 200px;
-                height: 200px;
-            }
-            .Nick{
-                position: absolute;
-                top: 400px;
-                right: 40px;
-                width: 200px;
-                height: 200px;
-            }
-            .Jayden{
-                position: absolute;
-                top: 800px;
-                right: 40px;
-                width: 200px;
-                height: 200px;
-            }
-            .ContactInfo{
-                position: absolute;
-                top: 1080px;
-                right: 590px;
-            }
-            .instaLogo{
-                position: absolute;
-                top: 1130px;
-                right: 670px;
-            }
-            .InstaLink{
-                position: absolute;
-                top: 1135px;
-                right: 570px;
-            }
-            .bcLogo{
-                position: absolute;
-                top: 1160px;
-                right: 660px;
-            }
-            .bcLink{
-                position: absolute;
-                top: 1165px;
-                right: 570px;
+                    position: absolute;
+                    top: 100px;
+                    left: 520px;
+                }
+                .MusicLink{
+                    position: relative;
+                    left: 570px;
+                }
+                .ReneTitle{
+                    color: white;
+                    position:relative;
+                }
+                .AngelTitle{
+                    color: white;
+                    position:relative;
+                }
+                .ReneText{
+                    color: white;
+                    position:relative;
+                }
+                .AngelText{
+                    color: white;
+                    position:relative;
+                }
+                .NickTitle{
+                    color: white;
+                    position: relative;
+                }
+                .NickText{
+                    color: white;
+                    position:relative;
+                }
+                .JaydenTitle{
+                    color: white;
+                    position: relative;
+                }
+                .JaydenText{
+                    color: white;
+                    position: relative;
+                }
+                .Rene{
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    width: 50%;
+                }
+                .Angel{
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    width: 50%;
+                }
+                .Nick{
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    width: 50%;
+                }
+                .Jayden{
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    width: 50%;
+                }
+                .ContactInfo{
+                    text-align:center;
+                }
+                .instaLogo{
+                    position: relative;
+                }
+                .InstaLink{
+                    position: relative;
+                }
+                .bcLogo{
+                    position: relative;
+                }
+                .bcLink{
+                    position: relative;
+                }
+
+            @media only screen and (min-width: 768px){
+                .HomeLink{
+                    position: absolute;
+                    top: 100px;
+                    left: 520px;
+                }
+                .MusicLink{
+                    position: relative;
+                    left: 570px;
+                }
+                .ReneTitle{
+                    color: white;
+                    position: relative;
+                    left: 300px;
+                }
+                .AngelTitle{
+                    color: white;
+                    position: absolute;
+                    top: 600px;
+                    left: 300px;
+                }
+                .ReneText{
+                    color: white;
+                    position: relative;
+                    top: -2px;
+                    left: 300px;
+                }
+                .AngelText{
+                    color: white;
+                    position: absolute;
+                    top: 640px;
+                    left: 300px;
+                }
+                .NickTitle{
+                    color: white;
+                    position: absolute;
+                    top: 410px;
+                    left: 650px;
+                }
+                .NickText{
+                    color: white;
+                    position: relative;
+                    top: 80px;
+                    left: 640px;
+                }
+                .JaydenTitle{
+                    color: white;
+                    position: absolute;
+                    left: 650px;
+                    top: 800px;
+                }
+                .JaydenText{
+                    color: white;
+                    position: absolute;
+                    top: 840px;
+                    left: 650px;
+                }
+                .Rene{
+                    position: absolute;
+                    top: 170px;
+                    left: 40px;
+                    width: 200px;
+                    height: 200px;
+                }
+                .Angel{
+                    position: absolute;
+                    top: 600px;
+                    left: 40px;
+                    width: 200px;
+                    height: 200px;
+                }
+                .Nick{
+                    position: absolute;
+                    top: 400px;
+                    right: 40px;
+                    width: 200px;
+                    height: 200px;
+                }
+                .Jayden{
+                    position: absolute;
+                    top: 800px;
+                    right: 40px;
+                    width: 200px;
+                    height: 200px;
+                }
+                .ContactInfo{
+                    position: absolute;
+                    top: 1080px;
+                    right: 590px;
+                }
+                .instaLogo{
+                    position: absolute;
+                    top: 1130px;
+                    right: 670px;
+                }
+                .InstaLink{
+                    position: absolute;
+                    top: 1135px;
+                    right: 570px;
+                }
+                .bcLogo{
+                    position: absolute;
+                    top: 1160px;
+                    right: 660px;
+                }
+                .bcLink{
+                    position: absolute;
+                    top: 1165px;
+                    right: 570px;
+                }
             }
         </style>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
