--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             }
 
             .HomeLink{
-                position: absolute;
-                top: 100px;
+                position: relative;
                 left: 140px;
             }
             .MusicLink{
