--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
             .HomeLink{
                 position: relative;
+                top: 2px;
                 left: 120px;
             }
             .MusicLink{
