Added video + theme

--- a/Music.html
+++ b/Music.html
@@ -1,5 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>Our Music</head>
+    <head>
+        <title>Our Music</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            a:link {
+            color:white; 
+            background-color: transparent; 
+            text-decoration: underline;
+            }
+            a:visited {
+            color: tan;
+            background-color: transparent;
+            text-decoration: underline;
+            }
+
+            h1{
+                color: white;
+                font-size: 40px;
+                text-align: center;
+            }
+            h2{
+                color:white;
+                text-align: center;
+            }
+            .HomeLink{
+                position: absolute;
+                top: 100px;
+                left: 140px;
+            }
+            .MusicLink{
+                position: relative;
+                left: 180px;
+            }
+            .Youtube1{
+                position: absolute;
+                top: 200px;
+                left: 350px;
+            }
+            .Title1{
+                color: white;
+                position: absolute;
+                top: 500px;
+                left: 350px;
+            }
+
+            @media only screen and (min-width: 768px){
+                .Youtube1{
+                    position: absolute;
+                    top: 200px;
+                    left: 350px;
+                }
+                .Title1{
+                    color: white;
+                    position: absolute;
+                    top: 500px;
+                    left: 350px;
+                }
+                .HomeLink{
+                    position: absolute;
+                    top: 100px;
+                    left: 520px;
+                }
+                .MusicLink{
+                    position: relative;
+                    left: 570px;
+                }
+                .ContactInfo{
+                    position: absolute;
+                    top: 1080px;
+                    right: 590px;
+                }
+                .instaLogo{
+                    position: absolute;
+                    top: 1130px;
+                    right: 670px;
+                }
+                .InstaLink{
+                    position: absolute;
+                    top: 1135px;
+                    right: 570px;
+                }
+                .bcLogo{
+                    position: absolute;
+                    top: 1160px;
+                    right: 660px;
+                }
+                .bcLink{
+                    position: absolute;
+                    top: 1165px;
+                    right: 570px;
+                }
+            }
+        </style>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body style="background-color: rgb(43, 40, 40);">
+        <h1>The Nollie Dog Official Website</h1>
+        <div class = "MusicLink"><a href="Music.html"> Our Music </a></div>
+        <div class = "HomeLink"><a href="index.html"> Home </a></div>
+
+        <h2> Our Latest Songs: </h2>
+        <div class = "Youtube1">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/agKF7KR0g64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <h4 class = "Title1"> "What the Fuck" </h4>
+
+
+        <h4 class = "ContactInfo" style="color:white"> Check us out!</h4>
+            <div class = "instaLogo">
+                <img src="https://www.transparentpng.com/thumb/logo-instagram/YfpFOL-logo-instagram-free-transparent.png" alt="Insta Logo" width= 30px height = 30px>
+            </div>
+            <div class= "InstaLink"> <a href="https://l.instagram.com/?u=https%3A%2F%2Finstagram.com%2Fnollie.dog%3Figshid%3D1eaeca23ay398&e=ATN-Q5DmSX1sJuCwWyY_8lLFVlyIGuXjyeGKFGH5WIJLII8LqUgG4PMG6g2wCb2YiELi5X-uR2s44-1xrDIUwBQGqKTDJYcnAizrtA&s=1">@nollie.dog</a></div>
+            <div class = "bcLogo">
+                <img src="bc.png" alt="Bandcamp Logo" width=50px height= 30px>
+            </div>
+            <div class= "bcLink"><a href="https://l.instagram.com/?u=http%3A%2F%2Fnolliedog.bandcamp.com%2F&e=ATNhwe3dtf6xFnoABfzLGk39bcbbC3ZgCpLAmeDUdfkJ0sYHeeZA4V9-sg39OWxs3kKKRsuFXTxFTJX0yLb5ngG-NJ9XVD9Y4jYtNg&s=1">Nollie Dog </a></div>
+    </body>
     
 </html>
