Updated Bandcamp link

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class = "bcLogo">
                 <img src="bc.png" alt="Bandcamp Logo" width=50px height= 30px>
             </div>
-            <div class= "bcLink"><a href="https://l.instagram.com/?u=http%3A%2F%2Fnolliedog.bandcamp.com%2F&e=ATNhwe3dtf6xFnoABfzLGk39bcbbC3ZgCpLAmeDUdfkJ0sYHeeZA4V9-sg39OWxs3kKKRsuFXTxFTJX0yLb5ngG-NJ9XVD9Y4jYtNg&s=1">Nollie Dog </a></div>
+            <div class= "bcLink"><a href="https://nolliedog.bandcamp.com/releases">Nollie Dog </a></div>
 
     </body>
 </html>
