--- a/Music.html
+++ b/Music.html
@@ -44,6 +44,22 @@
                 top: 500px;
                 left: 350px;
             }
+            .ContactInfo{
+                text-align:center;
+                position: relative
+            }
+            .instaLogo{
+                position: relative;
+            }
+            .InstaLink{
+                position: relative;
+            }
+            .bcLogo{
+                position: relative;
+            }
+            .bcLink{
+                position: relative;
+            }
 
             @media only screen and (min-width: 768px){
                 .Youtube1{
