Link to music broken

--- a/index.html
+++ b/index.html
@@ -28,85 +28,85 @@
             }
 
             .HomeLink{
-                position: relative;
-                top: -20px;
-                left: 120px;
+                position: absolute;
+                top: 100px;
+                left: 140px;
             }
             .MusicLink{
                 position: relative;
                 left: 180px;
             }
-                .ReneTitle{
-                    color: white;
-                    position:relative;
-                }
-                .AngelTitle{
-                    color: white;
-                    position:relative;
-                }
-                .ReneText{
-                    color: white;
-                    position:relative;
-                }
-                .AngelText{
-                    color: white;
-                    position:relative;
-                }
-                .NickTitle{
-                    color: white;
-                    position: relative;
-                }
-                .NickText{
-                    color: white;
-                    position:relative;
-                }
-                .JaydenTitle{
-                    color: white;
-                    position: relative;
-                }
-                .JaydenText{
-                    color: white;
-                    position: relative;
-                }
-                .Rene{
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                    width: 50%;
-                }
-                .Angel{
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                    width: 50%;
-                }
-                .Nick{
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                    width: 50%;
-                }
-                .Jayden{
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                    width: 50%;
-                }
-                .ContactInfo{
-                    text-align:center;
-                }
-                .instaLogo{
-                    position: relative;
-                }
-                .InstaLink{
-                    position: relative;
-                }
-                .bcLogo{
-                    position: relative;
-                }
-                .bcLink{
-                    position: relative;
-                }
+            .ReneTitle{
+                color: white;
+                position:relative;
+            }
+            .AngelTitle{
+                color: white;
+                position:relative;
+            }
+            .ReneText{
+                color: white;
+                position:relative;
+            }
+            .AngelText{
+                color: white;
+                position:relative;
+            }
+            .NickTitle{
+                color: white;
+                position: relative;
+            }
+            .NickText{
+                color: white;
+                position:relative;
+            }
+            .JaydenTitle{
+                color: white;
+                position: relative;
+            }
+            .JaydenText{
+                color: white;
+                position: relative;
+            }
+            .Rene{
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 50%;
+            }
+            .Angel{
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 50%;
+            }
+            .Nick{
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 50%;
+            }
+            .Jayden{
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 50%;
+            }
+            .ContactInfo{
+                text-align:center;
+            }
+            .instaLogo{
+                position: relative;
+            }
+            .InstaLink{
+                position: relative;
+            }
+            .bcLogo{
+                position: relative;
+            }
+            .bcLink{
+                position: relative;
+            }
 
             @media only screen and (min-width: 768px){
                 .HomeLink{
