--- a/Music.html
+++ b/Music.html
@@ -27,26 +27,28 @@
             }
             .HomeLink{
                 position: relative;
-                left: 140px;
+                left: 120px;
             }
             .MusicLink{
                 position: relative;
-                left: 180px;
+                left: 170px;
             }
             .Youtube1{
-                position: absolute;
+                position: relative;
                 top: 270px;
-                left: 100px;
+                left: 10px;
+            }
+            .video1Size{
+                width: 200px;
+                height: 315px;
             }
             .Title1{
                 color: white;
-                position: absolute;
-                top: 500px;
-                left: 350px;
+                position: relative;
+                left: 150px;
             }
             .ContactInfo{
-                text-align:center;
-                position: relative
+                text-align: center;
             }
             .instaLogo{
                 position: relative;
@@ -66,6 +68,10 @@
                     position: absolute;
                     top: 200px;
                     left: 350px;
+                }
+                .video1Size{
+                    width: 560px;
+                    height: 315px;
                 }
                 .Title1{
                     color: white;
@@ -118,9 +124,9 @@
         <div class = "MusicLink"><a href="Music.html"> Our Music </a></div>
         <div class = "HomeLink"><a href="index.html"> Home </a></div>
 
-        <h2> Our Latest Songs: </h2>
+        <h2> Our Latest Song: </h2>
         <div class = "Youtube1">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/agKF7KR0g64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class = "video1Size" src="https://www.youtube.com/embed/agKF7KR0g64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <h4 class = "Title1"> "What the Fuck" </h4>
 
