--- a/Music.html
+++ b/Music.html
@@ -26,8 +26,9 @@
                 text-align: center;
             }
             .HomeLink{
-                position: relative;
-                left: 120px;
+                position: absolute;
+                top: 200px;
+                left: 140px;
             }
             .MusicLink{
                 position: relative;
@@ -35,11 +36,11 @@
             }
             .Youtube1{
                 position: relative;
-                top: 270px;
-                left: 10px;
+                top: 70px;
+                left: 50px;
             }
             .video1Size{
-                width: 200px;
+                width: 350px;
                 height: 315px;
             }
             .Title1{
