--- a/Music.html
+++ b/Music.html
@@ -27,8 +27,8 @@
             }
             .HomeLink{
                 position: absolute;
-                top: 200px;
-                left: 140px;
+                top: 100px;
+                left: 135px;
             }
             .MusicLink{
                 position: relative;
@@ -36,8 +36,8 @@
             }
             .Youtube1{
                 position: relative;
-                top: 70px;
-                left: 50px;
+                top: 50px;
+                left: 30px;
             }
             .video1Size{
                 width: 350px;
@@ -46,22 +46,33 @@
             .Title1{
                 color: white;
                 position: relative;
+                top: 700px;
                 left: 150px;
             }
             .ContactInfo{
                 text-align: center;
+                top: 720px;
+                left: 150px;
             }
             .instaLogo{
-                position: relative;
+                position: absolute;
+                top: 740px;
+                left: 150px;
             }
             .InstaLink{
-                position: relative;
+                position: absolute;
+                left: 190px;
+                top: 750px;
             }
             .bcLogo{
-                position: relative;
+                position: absolute;
+                left: 150px;
+                top: 770px;
             }
             .bcLink{
-                position: relative;
+                position: absolute;
+                top: 780px;
+                left: 190px;
             }
 
             @media only screen and (min-width: 768px){
