--- a/Music.html
+++ b/Music.html
@@ -103,7 +103,7 @@
                 .ContactInfo{
                     position: absolute;
                     top: 1080px;
-                    right: 300px;
+                    right: 250px;
                 }
                 .instaLogo{
                     position: absolute;
@@ -113,7 +113,7 @@
                 .InstaLink{
                     position: absolute;
                     top: 1135px;
-                    right: 70px;
+                    left: 70px;
                 }
                 .bcLogo{
                     position: absolute;
