Added link to Merch

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                 position: relative;
                 left: 180px;
             }
+            .MerchLink{
+                position: relative;
+                left: 270px;
+            }
             .ReneTitle{
                 color: white;
                 position:relative;
@@ -117,6 +121,10 @@
                 .MusicLink{
                     position: relative;
                     left: 570px;
+                }
+                .MerchLink{
+                    position: relative;
+                    left: 620px;
                 }
                 .ReneTitle{
                     color: white;
