--- a/Music.html
+++ b/Music.html
@@ -34,6 +34,10 @@
                 position: relative;
                 left: 170px;
             }
+            .MerchLink{
+                position: relative;
+                left: 270px;
+            }
             .Youtube1{
                 position: relative;
                 top: 15px;
@@ -99,6 +103,10 @@
                 .MusicLink{
                     position: relative;
                     left: 570px;
+                }
+                .MerchLink{
+                    position: relative;
+                    left: 620px;
                 }
                 .ContactInfo{
                     position: absolute;
