--- a/Merch.html
+++ b/Merch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Our Music</title>
+        <title>Merch</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
@@ -34,20 +34,31 @@
                 position: relative;
                 left: 170px;
             }
-            .Youtube1{
+            .MerchLink{
                 position: relative;
-                top: 15px;
-                left: 30px;
+                
             }
-            .video1Size{
-                width: 350px;
-                height: 315px;
+            .formTitle{
+                position: relative;
+                left: 520px;
+                top: 390px;
             }
-            .Title1{
+            .form{
+                position: relative;
+                left: 470px;
+                top: 400px;
+            }
+            .Qtext{
                 color: white;
-                position: relative;
-                top: 20px;
-                left: 147px;
+            }
+            .Ntext{
+                color: white;
+            }
+            .Etext{
+                color: white;
+            }
+            .Atext{
+                color: white;
             }
             .ContactInfo{
                 text-align: center;
@@ -76,21 +87,6 @@
             }
 
             @media only screen and (min-width: 768px){
-                .Youtube1{
-                    position: absolute;
-                    top: 200px;
-                    left: 350px;
-                }
-                .video1Size{
-                    width: 560px;
-                    height: 315px;
-                }
-                .Title1{
-                    color: white;
-                    position: absolute;
-                    top: 500px;
-                    left: 350px;
-                }
                 .HomeLink{
                     position: absolute;
                     top: 100px;
@@ -99,6 +95,10 @@
                 .MusicLink{
                     position: relative;
                     left: 570px;
+                }
+                .MerchLink{
+                    position: relative;
+                    left: 620px;
                 }
                 .ContactInfo{
                     position: absolute;
@@ -134,15 +134,32 @@
     <body style="background-color: rgb(43, 40, 40);">
         <h1>The Nollie Dog Official Website</h1>
         <div class = "MusicLink"><a href="Music.html"> Our Music </a></div>
+        <div class = "MerchLink"><a href="Merch.html"> Merch </a></div>
         <div class = "HomeLink"><a href="index.html"> Home </a></div>
 
-        <h2> Our Latest Song: </h2>
-        <div class = "Youtube1">
-        <iframe class = "video1Size" src="https://www.youtube.com/embed/agKF7KR0g64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h3 class = "formTitle" style = "color:white">Order Form</h3>
+        <div class = "form">
+            <form action="orders.html" method="GET" enctype="multipart/form-data">
+            <div class = "Qtext">
+                <label for="quantity">Quantity</label>
+                <input type="quantity" name="quantity" id="quantity" required>
+            </div>
+            <div class = "Ntext">
+              <label for="name">Name</label>
+              <input type="text" name="name" id="name" required>
+            </div>
+            <div class = "Etext">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" required>
+            </div>
+            <div class = "Atext">
+                <label for="Address">Address</label>
+                <input type="Address" name="Address" id="Address" required>
+            </div>
+          <button type="submit">Submit</button>
+        </form>
         </div>
-        <h4 class = "Title1"> "What the Fuck" </h4>
-
-
+        
         <h4 class = "ContactInfo" style="color:white"> Check us out!</h4>
             <div class = "instaLogo">
                 <img src="https://www.transparentpng.com/thumb/logo-instagram/YfpFOL-logo-instagram-free-transparent.png" alt="Insta Logo" width= 30px height = 30px>
