--- a/Merch.html
+++ b/Merch.html
@@ -36,6 +36,7 @@
             }
             .MerchLink{
                 position: relative;
+                left: 300px;
                 
             }
             .formTitle{
@@ -66,22 +67,22 @@
                 left: 150px;
             }
             .instaLogo{
-                position: absolute;
+                position: relative;
                 top: 660px;
                 left: 150px;
             }
             .InstaLink{
-                position: absolute;
+                position: relative;
                 left: 190px;
                 top: 670px;
             }
             .bcLogo{
-                position: absolute;
+                position: relative;
                 left: 130px;
                 top: 690px;
             }
             .bcLink{
-                position: absolute;
+                position: relative;
                 top: 700px;
                 left: 190px;
             }
