--- a/Merch.html
+++ b/Merch.html
@@ -35,7 +35,8 @@
                 left: 170px;
             }
             .MerchLink{
-                position: relative;
+                position: absolute;
+                top: 100px;
                 left: 300px;
                 
             }
@@ -62,29 +63,29 @@
                 color: white;
             }
             .ContactInfo{
-                text-align: center;
+                text-align: relative;
                 top: 850px;
-                left: 150px;
+                left: 650px;
             }
             .instaLogo{
                 position: relative;
                 top: 660px;
-                left: 150px;
+                left: 650px;
             }
             .InstaLink{
                 position: relative;
-                left: 190px;
+                left: 690px;
                 top: 670px;
             }
             .bcLogo{
                 position: relative;
-                left: 130px;
+                left: 630px;
                 top: 690px;
             }
             .bcLink{
                 position: relative;
                 top: 700px;
-                left: 190px;
+                left: 690px;
             }
 
             @media only screen and (min-width: 768px){
