--- a/Merch.html
+++ b/Merch.html
@@ -35,19 +35,19 @@
                 left: 170px;
             }
             .MerchLink{
-                position: absolute;
+                position: relative;
                 top: 100px;
                 left: 700px;
                 
             }
             .formTitle{
                 position: relative;
-                left: 520px;
+                left: 550px;
                 top: 390px;
             }
             .form{
                 position: relative;
-                left: 470px;
+                left: 500px;
                 top: 400px;
             }
             .Qtext{
@@ -64,7 +64,7 @@
             }
             .ContactInfo{
                 text-align: relative;
-                top: 820px;
+                top: 800px;
                 left: 650px;
             }
             .instaLogo{
