--- a/Merch.html
+++ b/Merch.html
@@ -37,7 +37,7 @@
             .MerchLink{
                 position: relative;
                 top: 100px;
-                left: 700px;
+                right: 700px;
                 
             }
             .formTitle{
@@ -48,7 +48,7 @@
             .form{
                 position: relative;
                 left: 500px;
-                top: 400px;
+                top: 320px;
             }
             .Qtext{
                 color: white;
@@ -64,7 +64,7 @@
             }
             .ContactInfo{
                 text-align: relative;
-                top: 760px;
+                top: 700px;
                 left: 650px;
             }
             .instaLogo{
