--- a/Merch.html
+++ b/Merch.html
@@ -36,7 +36,7 @@
             }
             .MerchLink{
                 position: relative;
-                top: 100px;
+                top: 50px;
                 right: 700px;
                 
             }
@@ -48,7 +48,7 @@
             .form{
                 position: relative;
                 left: 500px;
-                top: 320px;
+                top: 310px;
             }
             .Qtext{
                 color: white;
@@ -63,7 +63,7 @@
                 color: white;
             }
             .ContactInfo{
-                text-align: relative;
+                position: relative;
                 top: 700px;
                 left: 650px;
             }
