--- a/Music.html
+++ b/Music.html
@@ -43,7 +43,16 @@
                 top: 15px;
                 left: 30px;
             }
+            .Youtube2{
+                position: relative;
+                top: 75px;
+                left: 30px;
+            }
             .video1Size{
+                width: 350px;
+                height: 315px;
+            }
+            .video2Size{
                 width: 350px;
                 height: 315px;
             }
@@ -51,6 +60,12 @@
                 color: white;
                 position: relative;
                 top: 20px;
+                left: 147px;
+            }
+            .Title2{
+                color: white;
+                position: relative;
+                top: 80px;
                 left: 147px;
             }
             .ContactInfo{
@@ -93,6 +108,21 @@
                     color: white;
                     position: absolute;
                     top: 500px;
+                    left: 350px;
+                }
+                .Youtube2{
+                    position: absolute;
+                    top: 400px;
+                    left: 350px;
+                }
+                .video1Size{
+                    width: 560px;
+                    height: 315px;
+                }
+                .Title1{
+                    color: white;
+                    position: absolute;
+                    top: 700px;
                     left: 350px;
                 }
                 .HomeLink{
@@ -150,6 +180,11 @@
         <iframe class = "video1Size" src="https://www.youtube.com/embed/agKF7KR0g64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <h4 class = "Title1"> "What the Fuck" </h4>
+        
+        <div class = "Youtube1">
+          <iframe class = "video2Size" src="https://www.youtube.com/embed/OCUvsa5Rris" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+        </div>
+        <h4 class = "Title2"> "Burn Out" </h4>
 
 
         <h4 class = "ContactInfo" style="color:white"> Check us out!</h4>
