--- a/index.html
+++ b/index.html
@@ -116,15 +116,16 @@
                 .HomeLink{
                     position: absolute;
                     top: 100px;
-                    left: 520px;
+                    left: 470px;
                 }
                 .MusicLink{
                     position: relative;
-                    left: 570px;
+                    left: 540px;
                 }
                 .MerchLink{
                     position: relative;
-                    left: 620px;
+                    top: -18px;
+                    left: 640px;
                 }
                 .ReneTitle{
                     color: white;
