--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
 
             .HomeLink{
                 position: absolute;
-                top: 148px;
-                left: 140px;
+                top: 80px;
+                left: 130px;
             }
             .MusicLink{
-                position: relative;
-                left: 180px;
+                position: absolute;
+                top: 80px;
+                left: 190px;
             }
             .MerchLink{
-                position: relative;
+                position: absolute;
+                top: 80px;
                 left: 270px;
             }
             .ReneTitle{
