--- a/Merch.html
+++ b/Merch.html
@@ -27,18 +27,18 @@
             }
             .HomeLink{
                 position: absolute;
-                top: 148px;
-                left: 130px;
+                top: 130px;
+                left: 110px;
             }
             .MusicLink{
-                position: relative;
-                left: 170px;
+                position: absolute;
+                top: 130px;
+                left: 160px;
             }
             .MerchLink{
-                position: relative;
-                top: 50px;
-                right: 700px;
-                
+                position: absolute;
+                top: 130px;
+                left: 240px;
             }
             .formTitle{
                 position: relative;
