Moving music link

--- a/Merch.html
+++ b/Merch.html
@@ -96,6 +96,7 @@
                 }
                 .MusicLink{
                     position: relative;
+                    top: 100px;
                     left: 540px;
                 }
                 .MerchLink{
