--- a/Music.html
+++ b/Music.html
@@ -135,6 +135,7 @@
                 }
                 .MusicLink{
                     position: relative;
+                    top 0px;
                     left: 540px;
                 }
                 .MerchLink{
