--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                 }
                 .MusicLink{
                     position: relative;
+                    top 0px;
                     left: 540px;
                 }
                 .MerchLink{
