--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 }
                 .MusicLink{
                     position: relative;
-                    top 0px;
+                    top: 0px;
                     left: 540px;
                 }
                 .MerchLink{
