--- a/Music.html
+++ b/Music.html
@@ -222,18 +222,18 @@
 
         <h2> Our Most Popular Song: </h2>
         <div class = "Youtube1">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Y24YBCNXlNU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class = "video1Size" width="560" height="315" src="https://www.youtube.com/embed/Y24YBCNXlNU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <h4 class = "Title1"> "What the Fuck" </h4>
         
       <h2 class = "latest" style ="color:white">Latest From Nollie Dog</h2>
         <div class = "Youtube2">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/1ej29oe6xz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class = "video2Size" width="560" height="315" src="https://www.youtube.com/embed/1ej29oe6xz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <h4 class = "Title2"> "Concrete" </h4>
 
         <div class = "Youtube3">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Gqax4DHWCjo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class = "video3Size" width="560" height="315" src="https://www.youtube.com/embed/Gqax4DHWCjo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <h4 class = "Title3"> "Ape Shit" </h4>
 
